<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorQuestion">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/pertanyaan"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/pilihan_1"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/pilihan_2"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/pilihan_3"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">
            <EditText
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/pilihan_4"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/mySpinner"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            android:layout_marginVertical="12dp"
            android:layout_height="28dp" />

        <TextView
            android:id="@+id/timeMade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_date"
            android:layout_marginTop="12dp"
            android:autofillHints="no"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/editedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_date"
            android:layout_marginTop="4dp"
            android:autofillHints="no"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_save"
            android:text="@string/tambah"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_delete"
            android:text="Hapus"
            android:backgroundTint="#FF0000"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>