<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorMaterial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="#ccc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_image"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/masukkan_judul_materi"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/masukkan_ringkasan_materi"
                android:autofillHints="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/masukkan_detail_materi"
                android:autofillHints="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/timeMade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_date"
            android:layout_marginTop="12dp"
            android:autofillHints="no"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/editedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_date"
            android:layout_marginTop="4dp"
            android:autofillHints="no"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_save"
            android:text="@string/simpan"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_delete"
            android:text="Hapus"
            android:backgroundTint="#FF0000"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>